--- a/tsconfig-src.json
+++ b/tsconfig-src.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "declaration": false,
-    "outDir": "./out",
+    "declaration": true,
+    "declarationDir": "./types",
+    "outDir": "./dist",
     "lib": ["es6"],
     "removeComments": true,
     "strict": true,
@@ -19,7 +20,6 @@
     "emitDecoratorMetadata": true
   },
   "include": [
-    "./**/*.ts",
-    "../src/**/*.ts"
+    "./src/**/*.ts"
   ]
 }
