--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "declaration": false,
-    "outDir": "./test-out",
+    "declaration": true,
+    "declarationDir": "../types",
+    "outDir": "../dist",
     "lib": ["es6"],
     "removeComments": true,
     "strict": true,
@@ -17,9 +18,5 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
-  },
-  "include": [
-    "./test/**/*.ts",
-    "./src/**/*.ts"
-  ]
+  }
 }
