--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rimraf ./dist ./types && tsc -p ./src",
-    "test": "npm run -s test:build && npm run test:run",
-    "test:build": "npm run -s build && rimraf ./test-out && tsc -p ./test",
-    "test:run": "ava ./test-out/test/tests.js",
-    "test:debug": "npm run -s test:build && node --inspect-brk ./node_modules/ava/profile.js ./test-out/test/tests.js"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "prepush": "npm test"
   },
   "repository": {
     "type": "git",
@@ -28,15 +27,46 @@
     "url": "https://github.com/Microsoft/inject-js/issues"
   },
   "homepage": "https://github.com/Microsoft/inject-js#readme",
+  "jest": {
+    "mapCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "tests/**/*.ts"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "dependency-container.ts",
+      "types.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tests/tsconfig.json",
+        "skipBabel": true
+      }
+    },
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "/tests/.*\\.test\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
   "dependencies": {
     "reflect-metadata": "^0.1.10"
   },
   "devDependencies": {
+    "@types/jest": "^22.1.2",
     "@types/node": "^8.0.53",
-    "ava": "^0.23.0",
-    "proxyquire": "^1.8.0",
-    "require-uncached": "^1.0.3",
+    "husky": "^0.14.3",
+    "jest": "^22.2.2",
     "rimraf": "^2.6.2",
+    "ts-jest": "^22.0.4",
     "typescript": "^2.6.1"
   }
 }
