--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lightweight dependency injection container for JavaScript/TypeScript",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf ./dist ./types && tsc",
+    "build": "rimraf ./dist && tsc",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
     "lint": "tslint -p ."
@@ -24,7 +24,6 @@
   "engines": {
     "node": ">= 6.0.0"
   },
-  "types": "types/index.d.ts",
   "author": "Steven Hobson-Campbell",
   "license": "MIT",
   "bugs": {
