Specify the types to load reflect-metadata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "types": [
+      "jest",
+      "node",
+      "reflect-metadata"
+    ],
     "removeComments": true,
     "strict": true,
     "noImplicitAny": true,
