--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "tsyringe",
   "version": "2.2.0",
   "description": "Lightweight dependency injection container for JavaScript/TypeScript",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "./dist/es5/index.js",
+  "es2015": "./dist/es2015/index.js",
+  "typings": "./dist/es2015/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc && tsc -p tsconfig.es5.json && tsc -p tsconfig.es2015.json",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
     "lint": "tslint -p ."
