--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/cjs/index.js",
   "module": "./dist/es5/index.js",
   "es2015": "./dist/es2015/index.js",
-  "typings": "./dist/es2015/index.d.ts",
+  "typings": "./dist/typings/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && tsc && tsc -p tsconfig.es5.json && tsc -p tsconfig.es2015.json",
+    "build": "rimraf ./dist && tsc && tsc -p tsconfig.es5.json && tsc -p tsconfig.es2015.json && tsc -p tsconfig.types.json",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
     "lint": "tslint -p ."
