--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "url": "https://github.com/Microsoft/tsyringe/issues"
   },
   "homepage": "https://github.com/Microsoft/tsyringe#readme",
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^1.9.3"
+  },
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/node": "^8.10.16",
