feat: Build ES2015 and ES5 modules (#17)
* Build ES2015 and ES5 module bundles

* Export directly from the modules to improve tree shaking

* Add a type declaration build

* Rename builds to esm5 and esm2015

* Added tslib

* Updated the readme to use the new imports

--- a/tsconfig.esm2015.json
+++ b/tsconfig.esm2015.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "es2015",
-    "module": "commonjs",
-    "outDir": "./dist/cjs"
+    "module": "es2015",
+    "outDir": "./dist/esm2015"
   }
 }
