--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "tsyringe",
   "version": "2.2.0",
   "description": "Lightweight dependency injection container for JavaScript/TypeScript",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "./dist/esm5/index.js",
+  "es2015": "./dist/esm2015/index.js",
+  "typings": "./dist/typings/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc && tsc -p tsconfig.esm5.json && tsc -p tsconfig.esm2015.json && tsc -p tsconfig.types.json",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
     "lint": "tslint -p ."
@@ -30,7 +33,9 @@
     "url": "https://github.com/Microsoft/tsyringe/issues"
   },
   "homepage": "https://github.com/Microsoft/tsyringe#readme",
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^1.9.3"
+  },
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/node": "^8.10.16",
