--- a/tsconfig.esm5.json
+++ b/tsconfig.esm5.json
@@ -4,11 +4,7 @@
     "target": "es5",
     "module": "es2015",
     "outDir": "./dist/esm5",
-    "lib": [
-      "es5",
-      "es2015.iterable",
-      "es2015.collection",
-      "es2015.symbol"
-    ]
-  }
+    "lib": ["es5", "es2015.iterable", "es2015.collection", "es2015.symbol"]
+  },
+  "files": ["src/es5Types.d.ts"]
 }
