--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rimraf ./dist && tsc && tsc -p tsconfig.esm5.json && tsc -p tsconfig.esm2015.json && tsc -p tsconfig.types.json",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
-    "lint": "tslint -p ."
+    "lint": "prettier --check \"src/**/*.ts\" && eslint **/*.ts"
   },
   "repository": {
     "type": "git",
@@ -40,13 +40,15 @@
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/node": "^8.10.16",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "prettier": "1.16.4",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.10.0",
-    "tslint-eslint-rules": "^5.3.1",
     "typescript": "^3.1.6"
   }
 }
