--- a/typescript/tsconfig.esm5.json
+++ b/typescript/tsconfig.esm5.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "target": "es5",
     "module": "es2015",
-    "outDir": "./dist/esm5",
+    "outDir": "../dist/esm5",
     "lib": ["es5", "es2015.iterable", "es2015.collection", "es2015.symbol"]
   },
-  "files": ["src/es5Types.d.ts"]
+  "files": ["./es5Types.d.ts"]
 }
