--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./typescript/tsconfig.base.json",
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
