--- a/typescript/tsconfig.base.json
+++ b/typescript/tsconfig.base.json
@@ -17,5 +17,6 @@
     "moduleResolution": "node",
     "importHelpers": true
   },
-  "include": ["../src/"]
+  "include": ["../src/"],
+  "exclude": ["../src/__tests__"]
 }
