--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf ./dist",
     "test": "npm run lint && jest --config test/jest.config.js",
     "test:coverage": "jest --config test/jest.config.js --coverage",
-    "lint": "prettier --check \"src/**/*.ts\" && eslint **/*.ts"
+    "lint": "prettier --check \"src/**/*.ts\" && eslint \"**/*.ts\""
   },
   "repository": {
     "type": "git",
