--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^8.10.16",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "husky": "^3.0.0",
