--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "rimraf ./dist",
     "test": "npm run lint && jest --config test/jest.config.js",
     "test:coverage": "jest --config test/jest.config.js --coverage",
-    "lint": "prettier --check \"src/**/*.ts\" && eslint \"**/*.ts\""
+    "lint": "prettier --check \"./src/**/*.ts\" && eslint --ext \".js,.jsx,.ts,.tsx\" \"./src\"",
+    "lint:fix": "prettier \"./src/**/*.ts\" && eslint --fix --ext \".js,.jsx,.ts,.tsx\" \"./src\""
   },
   "repository": {
     "type": "git",
@@ -48,7 +49,8 @@
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.0",
     "jest": "^24.7.1",
     "prettier": "1.17.0",
