--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -33,3 +33,4 @@ overrides:
       - "*.spec.ts"
     rules:
       "@typescript-eslint/no-empty-function": off
+      "@typescript-eslint/interface-name-prefix": off
