--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "tsyringe",
-  "version": "3.4.0",
+  "version": "4.0.0",
   "description": "Lightweight dependency injection container for JavaScript/TypeScript",
   "main": "dist/cjs/index.js",
   "module": "./dist/esm5/index.js",
   "es2015": "./dist/esm2015/index.js",
   "typings": "./dist/typings/index.d.ts",
   "scripts": {
-    "build": "npm run clean && npm run build:cjs && npm run build:es5 && npm run build:es2015 && npm run build:types",
+    "build": "yarn clean && yarn build:cjs && yarn build:es5 && yarn build:es2015 && yarn build:types",
     "build:cjs": "tsc",
     "build:es5": "tsc -p ./typescript/tsconfig.esm5.json",
     "build:es2015": "tsc -p ./typescript/tsconfig.esm2015.json",
     "build:types": "tsc -p ./typescript/tsconfig.types.json",
     "clean": "rimraf ./dist",
-    "test": "npm run lint && jest --config test/jest.config.js",
-    "test:inspect": "npm run lint && node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --config test/jest.config.js",
+    "test": "yarn lint && jest --config test/jest.config.js",
+    "test:inspect": "yarn lint && node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --config test/jest.config.js",
     "test:coverage": "jest --config test/jest.config.js --coverage",
     "lint": "eslint --ext \".js,.jsx,.ts,.tsx\" \"./src\"",
     "lint:fix": "eslint --fix --ext \".js,.jsx,.ts,.tsx\" \"./src\""
