- Removes the automatic linting on test and adds it as a specific test in the cicd

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           npm -g i yarn
           yarn
           yarn build
+          yarn lint
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
