--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build:esnext": "tsc -p ./typescript/tsconfig.esmnext.json",
     "build:types": "tsc -p ./typescript/tsconfig.types.json",
     "clean": "rimraf ./dist",
-    "test": "jest --config test/jest.config.js",
-    "test:inspect": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --config test/jest.config.js",
+    "test": "yarn lint && jest --config test/jest.config.js",
+    "test:inspect": "yarn lint && node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --config test/jest.config.js",
     "test:coverage": "jest --config test/jest.config.js --coverage",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
@@ -35,7 +35,7 @@
     "typescript"
   ],
   "engines": {
-    "node": ">= 6.0.0"
+    "node": ">= 18.0.0"
   },
   "author": "Steven Hobson-Campbell",
   "license": "MIT",
@@ -55,11 +55,11 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
-    "jest": "^24.7.1",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
-    "ts-jest": "^24.3.0",
+    "ts-jest": "^29.3.1",
     "typescript": "^5.8.3"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
