--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsyringe",
-  "version": "4.9.1",
+  "version": "5.0.0-alpha.1",
   "description": "Lightweight dependency injection container for JavaScript/TypeScript",
   "main": "dist/cjs/index.js",
   "module": "./dist/esm5/index.js",
