Upgrades dependencies to latest + changes required to support latest versions (#265)
* Upgrades dependencies to latest + changes required to support latest versions.

* Updates the build to use Node 22 to install and build, while testing for each supported nodejs version

* - Removes the automatic linting on test and adds it as a specific test in the cicd

* Updates nodejs versions supported.

* Removes reference to yarn in `package.json`

* adds important dependency that must be fixed in yarn.lock

* Updates dependencies

* Edits the yarn.lock file to update the dependency version for istanbul-lib-report. Else, it takes an old one and things break.

* sets an alpha version to avoid publishing issues

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x, 14.x, 16.x, 18.x, 20.x, 22.x]
+        node-version: [18.x, 20.x, 22.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -28,10 +28,12 @@ jobs:
         run: |
           npm -g i yarn
 
-      - name: npm install, build, and test
+      - name: yarn install, yarn build, and yarn test
         run: |
           yarn
           yarn build
           yarn test
         env:
           CI: true
+
+
